--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
 configuracion.autor.nombre=John
-configuracion.autor.email=Goddard@gmail.com
+configuracion.autor.email=Goddard@gmail.comgit
